--- a/index.html
+++ b/index.html
@@ -128,12 +128,14 @@
                 <p>Angular input and form states provide options but.... </p>
                 <ul>
                     <li>Displaying multiple errors for a single input control</li>
-                    <a target="_blank" href="https://docs.angularjs.org/api/ngMessages/directive/ngMessage">ngMessage</a>
+                    <ul>
+                    <li><a target="_blank" href="https://docs.angularjs.org/api/ngMessages/directive/ngMessage">ngMessage</a> is a directive with the purpose to show and hide a particular message</li>
+                        </ul>
                     <li>Custom validation</li>
                 </ul>
             </section>
             <section>
-
+                <h2>ngMessage example</h2>
             </section>
             <section>
                 <h2>Error Handling</h2>
