--- a/index.html
+++ b/index.html
@@ -313,6 +313,23 @@
                     </code></pre>
             </section>
             <section>
+                <h2>Tips and Tricks</h2>
+                <a target="_blank" href="https://www.npmjs.com/package/angular-local-storage">angular-local-storage</a>
+                <p>An Angular module that gives you access to the browsers local storage</p>
+            </section>
+            <section>
+                <h2>Tips and Tricks</h2>
+                <p>Data preloading</p>
+            </section>
+            <section>
+                <h2>Angular 1.x -> Angular 2.0</h2>
+                <p>Directives to components</p>
+            </section>
+            <section>
+                <h2>Data Storage</h2>
+                <p>Local storage</p>
+            </section>
+            <section>
                 <h2>A/B Testing</h2>
                 (John)
             </section>
