take out stupid fadin for list. what a dumb idea

--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@
                 <h2>A/B Testing</h2>
                 <h3>Third party options</h3>
                 <ul>
-                    <li class="fragment" data-autoslide="1000">Optimizely (expensive but powerful)</li>
-                    <li class="fragment" data-autoslide="1000">Convert</li>
-                    <li class="fragment" data-autoslide="1000">Visual Web Optimizer</li>
+                    <li class="fragment">Optimizely (expensive but powerful)</li>
+                    <li class="fragment">Convert</li>
+                    <li class="fragment">Visual Web Optimizer</li>
                 </ul>
             </section>
             <section>
@@ -411,18 +411,18 @@ try{
             <section>
                 <h2>A/B Testing Issues</h2>
                 <ul>
-                    <li class="fragment" data-autoslide="1000">Timing</li>
-                    <li class="fragment" data-autoslide="1000">New Functionality without builds</li>
-                    <li class="fragment" data-autoslide="1000">Chained testing</li>
-                    <li class="fragment" data-autoslide="1000">Accurate test firing</li>
+                    <li class="fragment">Timing</li>
+                    <li class="fragment">New Functionality without builds</li>
+                    <li class="fragment">Chained testing</li>
+                    <li class="fragment">Accurate test firing</li>
                 </ul>
             </section>
             <section>
                 <h2>Tips and Tricks</h2>
                 <ul>
-                    <li class="fragment" data-autoslide="1000">Push logic to the A/B testing framework to keep base code generic</li>
-                    <li class="fragment" data-autoslide="1000">Set a state in the testing framework to guard against multi-firing</li>
-                    <li class="fragment" data-autoslide="1000">Trigger all test on a specific hash via $onStateChange</li>
+                    <li class="fragment">Push logic to the A/B testing framework to keep base code generic</li>
+                    <li class="fragment">Set a state in the testing framework to guard against multi-firing</li>
+                    <li class="fragment">Trigger all test on a specific hash via $onStateChange</li>
                     <pre><code data-noescape>
 $rootScope.$on('$stateChangeStart',
     function (ev, to, toParams, from, fromParams) {
