removed ng-optimizely

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 <h2>A/B Testing Site Functionality</h2>
                    <p>
                        &lt;body ng-app="consumerWeb.App" class="sign_up"><br/>
-                       &lt;div id="mainContent" ng-optimizely="" ui-view>&lt;/div><br/>&lt;/body&gt;
+                       &lt;div id="mainContent" ui-view>&lt;/div><br/>&lt;/body&gt;
                    </p>
             </section>
 
