--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
         <div class="slides">
             <section>
                 <h2>Project Management</h2>
-                Pivotal Tracker
+                <a target="_blank" href="https://www.pivotaltracker.com">Pivotal Tracker</a>
             </section>
-            <section data-background-image="images/pivotal_tracker.png"></section>
             <section>
                 <h2>Source Control</h2>
                 <ul>
@@ -301,7 +300,7 @@
                 <h2>Tips and Tricks</h2>
                 <a target="_blank" href="https://github.com/rafaelcamargo/ng-surprise">ng-surprise</a>
                 <p>This is a AngularJS module to put Easter eggs in your application. Sometimes you need an Easter egg to allow your dev staff to skip some configuration step or close an uncloseable modal in your app. So, ng-surprise is an easy way to do that.</p>
-                &lt;div data-surprise=&quot;classicJourney1Driver1VehicleIL&quot; data-surprise-trigger=&quot;86,49,73,76,49,49&quot;&gt;&lt;/div&gt;
+                &lt;div data-surprise=&quot;classicJourney1Driver1VehicleIL&quot; data-surprise-trigger=&quot;up,up,down,down,a,b,a,b&quot;&gt;&lt;/div&gt;
             </section>
             <section>
                 <h2>Tips and Tricks</h2>
@@ -485,6 +484,14 @@ $rootScope.$on('$stateChangeStart',
                     <li><a target="_blank" href="https://cloud.google.com/bigquery">Google Big Query</a></li>
                     <li><a target="_blank" href="https://www.google.com/analytics">Google Analytics</a></li>
                     <li><a target="_blank" href="https://qualaroo.com">Qualaroo</a></li>
+                </ul>
+            </section>
+            <section>
+                <h2>The Future</h2>
+                <ul>
+                    <li>Angular 2</li>
+                    <li>Pub/Sub</li>
+                    <li>Native App (Ionic)</li>
                 </ul>
             </section>
         </div>
