added hank screenshots

--- a/index.html
+++ b/index.html
@@ -467,6 +467,21 @@ $rootScope.$on('$stateChangeStart',
                     <li>Target Multiple Operating Systems</li>
                 </ul>
             </section>
+			<section>
+				<section data-background-image="images/hank_browser_support.png"></section>
+			</section>
+			<section>
+				<section data-background-image="images/hank_tickets.png"></section>
+			</section>
+			<section>
+				<section data-background-image="images/hank_test_ex1.png"></section>
+			</section>
+			<section>
+				<section data-background-image="images/hank_test_ex2.png"></section>
+			</section>
+			<section>
+				<section data-background-image="images/hank_email.png"></section>
+			</section>
             <section>
                 <h2>DEVOPS: Monitoring & Alerting</h2>
                 <ul>
